--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     login_guest: marker for guest on the main page
     registration_user: marker for user registration
+    need_review: final tests for verification
